RESOLVED FIXED286407
[WebGPU] GPUDevice bindGroup cache does not handle buffers with different offsets
https://bugs.webkit.org/show_bug.cgi?id=286407
Summary [WebGPU] GPUDevice bindGroup cache does not handle buffers with different off...
Mike Wyrzykowski
Reported 2025-01-22 22:15:42 PST
[WebGPU] GPUDevice bindGroup cache does not handle buffers with different offsets
Attachments
Mike Wyrzykowski
Comment 1 2025-01-22 22:21:32 PST
Mike Wyrzykowski
Comment 2 2025-01-22 22:24:20 PST
EWS
Comment 3 2025-01-23 15:31:36 PST
Committed 289317@main (7605701f47be): <https://commits.webkit.org/289317@main> Reviewed commits have been landed. Closing PR #39436 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.